// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset all options 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-gEvEer eNanVs hwFdrX"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-aXZVg jPvJsJ"
      >
        <span
          class="sc-aXZVg fjkwRj"
          data-testid="inline-banner-icon"
        >
          <img
            alt=""
            class="sc-iGgWBj lcrpYX"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1709052869/icons/Icon_Info_vsx3xi.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </span>
      </div>
      <div
        class="sc-aXZVg iiOecC"
        data-testid="inline-banner-message"
      >
        Info example
      </div>
    </div>
    <div
      class="sc-aXZVg sc-gEvEer fnUknJ hwFdrX"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-aXZVg jPvJsJ"
      >
        <span
          class="sc-aXZVg fjkwRj"
          data-testid="inline-banner-icon"
        >
          <img
            alt=""
            class="sc-iGgWBj lcrpYX"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1709052869/icons/Icon_Info_vsx3xi.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </span>
      </div>
      <div
        class="sc-aXZVg iiOecC"
        data-testid="inline-banner-message"
      >
        Neutral example
      </div>
    </div>
    <div
      class="sc-aXZVg sc-gEvEer fiwBuP hwFdrX"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-aXZVg jPvJsJ"
      >
        <span
          class="sc-aXZVg fjkwRj"
          data-testid="inline-banner-icon"
        >
          <img
            alt=""
            class="sc-iGgWBj lcrpYX"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1699895534/icons/Icon-Success_aiiprx.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </span>
      </div>
      <div
        class="sc-aXZVg iiOecC"
        data-testid="inline-banner-message"
      >
        Success example
      </div>
    </div>
    <div
      class="sc-aXZVg sc-gEvEer iRjvWt hwFdrX"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-aXZVg jPvJsJ"
      >
        <span
          class="sc-aXZVg fjkwRj"
          data-testid="inline-banner-icon"
        >
          <img
            alt=""
            class="sc-iGgWBj lcrpYX"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1704901279/icons/zzszodmk7fvxm9xzzg9s.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </span>
      </div>
      <div
        class="sc-aXZVg iiOecC"
        data-testid="inline-banner-message"
      >
        Alert example
      </div>
    </div>
    <div
      class="sc-aXZVg sc-gEvEer coDCXm hwFdrX"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-aXZVg jPvJsJ"
      >
        <span
          class="sc-aXZVg fjkwRj"
          data-testid="inline-banner-icon"
        >
          <img
            alt=""
            class="sc-iGgWBj bioiGW"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1699895534/icons/Icon-Error_r25aza.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </span>
      </div>
      <div
        class="sc-aXZVg iiOecC"
        data-testid="inline-banner-message"
      >
        Error example
      </div>
    </div>
  </div>
</body>
`;

exports[`Fieldset default options 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-gEvEer eNanVs hwFdrX"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-aXZVg jPvJsJ"
      >
        <span
          class="sc-aXZVg fjkwRj"
          data-testid="inline-banner-icon"
        >
          <img
            alt=""
            class="sc-iGgWBj lcrpYX"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1709052869/icons/Icon_Info_vsx3xi.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </span>
      </div>
      <div
        class="sc-aXZVg iiOecC"
        data-testid="inline-banner-message"
      >
        Default example
      </div>
    </div>
  </div>
</body>
`;
